--- a/template.yml
+++ b/template.yml
@@ -14,9 +14,9 @@ Resources:
     monitor:
       Type: "Aliyun::Serverless::Function"
       Properties:
-        Description: "FC event function powered by custom-container and Python Flask"
+        Description: "自如爬虫"
         Runtime: python3
-        Timeout: 600
+        Timeout: 20
         CAPort: 9000
         Handler: main.run
         Initializer: main.initializer
